--- a/powo-portal/src/main/frontend/src/sass/pages/_taxon.scss
+++ b/powo-portal/src/main/frontend/src/sass/pages/_taxon.scss
@@ -67,15 +67,15 @@ button {
 }
 
 .navbar-default .navbar-nav .active a, .navbar-default .navbar-nav .active a:focus, .navbar-default .navbar-nav .active a:hover {
-  background-color: #008285;
-  color: white;
+  color: #008285;
+  background-color: white;
 }
 
 .navbar-nav--article li:hover {
-  background-color: #008285;
+  color: #008285;
 }
 .navbar-default .navbar-nav li a:hover {
-  color: white;
+  color: #008285;
 }
 .navbar {
   border-bottom: 1px solid #949494;
